--- a/Party Similarity.ipynb
+++ b/Party Similarity.ipynb
@@ -456,7 +456,9 @@
     "    ax = fig.add_subplot(2, 2, n + 1, projection='radar')\n",
     "    plt.rgrids(radial_grid)\n",
     "    ax.set_title(title, weight='bold', size='medium', position=(0.5, 1.1),\n",
-    "                 horizontalalignment='center', verticalalignment='center')\n",
+    "        horizontalalignment='center',\n",
+    "        verticalalignment='center',\n",
+    "    )\n",
     "    for d, color in zip(data[title], colors):\n",
     "        ax.plot(theta, d, color=color)\n",
     "    ax.set_varlabels(spoke_labels)\n",
